[gd_scene load_steps=11 format=3 uid="uid://cfr2j0ekmm5bm"]

[ext_resource type="Script" path="res://addons/ggs/editor/component_panel/component_panel.gd" id="1_3cgut"]
[ext_resource type="Texture2D" uid="uid://d1w4gm5lxr5oe" path="res://addons/ggs/assets/components/switch.svg" id="2_0dps6"]
[ext_resource type="Texture2D" uid="uid://cv4acsp6se48h" path="res://addons/ggs/assets/apply_toggle.svg" id="2_pmfiy"]
[ext_resource type="Texture2D" uid="uid://dnoh7pngjjxo" path="res://addons/ggs/assets/components/arrow_list.svg" id="3_2xbnr"]
[ext_resource type="Texture2D" uid="uid://begw4pd8fla1b" path="res://addons/ggs/assets/components/check_box.svg" id="4_l5gge"]
[ext_resource type="Texture2D" uid="uid://d4la523u84xdr" path="res://addons/ggs/assets/components/option_list.svg" id="5_laauy"]
[ext_resource type="Texture2D" uid="uid://8evhimaica7h" path="res://addons/ggs/assets/components/radio_list.svg" id="6_ujh2t"]
[ext_resource type="Texture2D" uid="uid://c1tvfun1or855" path="res://addons/ggs/assets/components/slider.svg" id="7_h24xp"]
[ext_resource type="Texture2D" uid="uid://cpe14iw7ko8lx" path="res://addons/ggs/assets/components/spinbox.svg" id="8_hg2yh"]
[ext_resource type="Texture2D" uid="uid://c2ydg10l7p6ff" path="res://addons/ggs/assets/components/button.svg" id="10_uqb4s"]

[node name="ComponentPanel" type="Control"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3cgut")

[node name="MainCtnr" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="MainCtnr"]
layout_mode = 2

[node name="GroupField" type="LineEdit" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Node Group Name
Newly created nodes are added to this group.
Has no effect if empty."
placeholder_text = "Node Group Name"
clear_button_enabled = true

[node name="ApplyBtn" type="Button" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Apply On Change of New Nodes
Sets `apply_on_change` of newly created nodes."
toggle_mode = true
icon = ExtResource("2_pmfiy")
flat = true

[node name="ComponentList" type="ItemList" parent="MainCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
item_count = 8
max_columns = 2
same_column_width = true
item_0/text = "Arrow List"
item_0/icon = ExtResource("3_2xbnr")
item_0/disabled = true
item_1/text = "Checkbox"
item_1/icon = ExtResource("4_l5gge")
item_1/disabled = true
item_2/text = "Option List"
item_2/icon = ExtResource("5_laauy")
item_2/disabled = true
item_3/text = "Radio List"
item_3/icon = ExtResource("6_ujh2t")
item_3/disabled = true
item_4/text = "Slider"
item_4/icon = ExtResource("7_h24xp")
item_4/disabled = true
item_5/text = "SpinBox"
item_5/icon = ExtResource("8_hg2yh")
item_5/disabled = true
item_6/text = "Switch"
item_6/icon = ExtResource("2_0dps6")
item_6/disabled = true
item_7/text = "Toggle Button"
item_7/icon = ExtResource("10_uqb4s")
item_7/disabled = true
